src/tests/snapshots/fmtt__tests__format__markdown_headers_separators-2.snap
---
source: src/tests/format.rs
expression: "&markdown_formatted"
---
# Header 1
body
---
## Header 2
content
===
###### Header 6
####### This is just ordinary text, not a header.
