src/tests/snapshots/fmtt__tests__format__markdown_ordered_list-2.snap
---
source: src/tests/format.rs
expression: "&markdown_formatted"
---
1. Lorem ipsum dolor sit amet
2. consectetur adipiscing elit
3. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
