src/tests/snapshots/fmtt__tests__format__markdown_ordered_list.snap
---
source: src/tests/format.rs
expression: "&default_formatted"
---
1. Lorem ipsum dolor sit amet 2. consectetur adipiscing elit 3.
Sed do eiusmod tempor incididunt ut labore et
    dolore magna aliqua
