src/tests/snapshots/fmtt__tests__format__markdown_unordered_list-2.snap
---
source: src/tests/format.rs
expression: "&markdown_formatted"
---
- Lorem ipsum dolor sit amet
- consectetur adipiscing elit
* Sed do eiusmod tempor incididunt ut labore et
    dolore magna aliqua
