src/tests/snapshots/fmtt__tests__format__markdown_unordered_list.snap
---
source: src/tests/format.rs
expression: "&default_formatted"
---
- Lorem ipsum dolor sit amet - consectetur adipiscing elit * Sed do eiusmod
tempor incididunt ut labore et
    dolore magna aliqua
